<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Classroom">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:baselineAligned="false"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/este" />

        <TextView
            android:id="@+id/textView49"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:text="Glossary"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:lineSpacingExtra="2sp"
                android:text="@string/wheter" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/back" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/barspoon" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/bitters" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/blend" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/build" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/dry" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/flame" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/floata" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/free" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/frost" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/cooler" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/barterms" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/dirty" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/garnish" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/highball" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/jigger" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/layer" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/mixer">

            </TextView>

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/muddle" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/neat" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/pony" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/Premium" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/rim" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/rocks" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/sangria" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/shaker" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/shake" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/shake_strain" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/shooter" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/sour" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/speed" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/straigh" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/strain" />

            <TextView
                android:id="@+id/textView44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/twist" />

            <TextView
                android:id="@+id/textView45"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/virgin" />

            <TextView
                android:id="@+id/textView46"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/well" />

            <TextView
                android:id="@+id/textView47"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/thats" />

            <TextView
                android:id="@+id/textView48"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="12dp"
                android:lineSpacingExtra="2sp"
                android:text="Source: https://barsandbartending.com/" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
